namespace Frontend.Service.AlertService;

public enum AlertType
{
    ActuatorDetailsFailure,
    NetworkError
}